# dynamicslib

./: .gitignore  README.md  __init__.py  fix.ipynb  period-multiplying-math.ipynb  pyproject.toml
src/dynamicslib/: DOP853_coefs.py  __init__.py  common.py  consts.py  continuation.py  integrator.py  plotting.py  targeter.py
src/dynamicslib/tool_demos/: L4-short-and-long.ipynb  axial.ipynb  bifurcate_follow.ipynb  broucke.ipynb  lyapunov.ipynb  resonance.ipynb  vertical.ipynb
